<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daenerys.atandroid.TelaLogin">

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextSenha2"
        android:hint="@string/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextEmail2"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSenha2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonEntrar"
        android:layout_below="@+id/buttonEntrar"
        android:layout_marginTop="22dp"
        android:text="@string/voltar" />
</RelativeLayout>
